--- a/Components/Pages/RegisterPage.razor
+++ b/Components/Pages/RegisterPage.razor
@@ -1,10 +1,4 @@
-﻿
-@using static BlazorAdminpanel.Responses.CustomResponses
-@inject IAccount accountService
-@inject IJSRuntime js
-@inject NavigationManager NavManager
-@inject AuthenticationStateProvider AuthStateProvider
-@page "/register"
+﻿@page "/register"
 @rendermode InteractiveServer 
 
 <div class="container">
