--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -4,10 +4,13 @@
     <div class="sidebar">
         <NavMenu />
     </div>
-
-    <main>
+    <main>         
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <AuthorizeView>
+                <Authorized>
+            <a class="btn btn-link text-danger text-decoration-none" href="Components/Pages/LogoutPage">Logout</a>
+                </Authorized>
+            </AuthorizeView>
         </div>
 
         <article class="content px-4">
@@ -21,3 +24,4 @@
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
+
