--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -2,7 +2,7 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Приветствую Вас в приложении администратора</h1>
 
 <AuthorizeView>
 	<Authorized>
