--- a/Components/Pages/Weather_map.razor
+++ b/Components/Pages/Weather_map.razor
@@ -5,7 +5,7 @@
 <head>
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css" />
-    <script src="https://api-maps.yandex.ru/2.1/?apikey=83aa3619-6c56-4fc7-b3bb-6ddcf82d7190&lang=ru_RU"></script>
+    <script src=""></script>
     
 </head>
 
