--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,63 +1,90 @@
-﻿
+﻿@using Microsoft.AspNetCore.Components.Authorization
+@using System.Security.Claims
+@inject AuthenticationStateProvider AuthenticationStateProvider
+
 <div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">BlazorAdminpanel</a>
-    </div>
+	<div class="container-fluid">
+		<a class="navbar-brand" href="">AdminPanel</a>
+	</div>
 </div>
 
 <input type="checkbox" title="Navigation menu" class="navbar-toggler" />
-@* <AuthorizeView>
-    <Authorized> *@
-        <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-            <nav class="flex-column">
-                <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                        <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-                    </NavLink>
-                </div>
-                
-{
-                <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="login">
-                        <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Login
-                    </NavLink>
-                </div>
 
-                <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="register">
-                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Register
-                    </NavLink>
-                </div>
+<AuthorizeView>
+	<Authorized>
+		@if (IsUserInRole("Admin"))
+		{
+			<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
+				<nav class="flex-column">
+					<div class="nav-item px-3">
+						<NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+							<span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+						</NavLink>
+					</div>
+					<div class="nav-item px-3">
+						<NavLink class="nav-link" href="login">
+							<span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Login
+						</NavLink>
+					</div>
+					<div class="nav-item px-3">
+						<NavLink class="nav-link" href="register">
+							<span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Add User
+						</NavLink>
+					</div>
+					<div class="nav-item px-3">
+						<NavLink class="nav-link" href="Users">
+							<span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Users
+						</NavLink>
+					</div>
+				</nav>
+			</div>
+		}
+		else if (IsUserInRole("User"))
+		{
+			<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
+				<nav class="flex-column">
+					<div class="nav-item px-3">
+						<NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+							<span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+						</NavLink>
+					</div>
+					<div class="nav-item px-3">
+						<NavLink class="nav-link" href="login">
+							<span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Login
+						</NavLink>
+					</div>
+					<div class="nav-item px-3">
+						<NavLink class="nav-link" href="weather">
+							<span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather map
+						</NavLink>
+					</div>
+				</nav>
+			</div>
+		}
+	</Authorized>
+	<NotAuthorized>
+		<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
+			<nav class="flex-column">
+				<div class="nav-item px-3">
+					<NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+						<span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+					</NavLink>
+				</div>
+				<div class="nav-item px-3">
+					<NavLink class="nav-link" href="login">
+						<span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Login
+					</NavLink>
+				</div>
+			</nav>
+		</div>
+	</NotAuthorized>
+</AuthorizeView>
 
-                <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="weather_map">
-                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather map
-                    </NavLink>
-                </div>
-
-                <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="Users">
-                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Users
-                    </NavLink>
-                </div>
-            </nav>
-        </div>
-        
-@*     </Authorized>
-    <NotAuthorized> *@
-        
-                <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                        <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-                    </NavLink>
-                </div>
-
-                <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="login">
-                        <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Login
-                    </NavLink>
-                </div>
-@*     </NotAuthorized>
-</AuthorizeView> *@
-
-
+@code {
+	private bool IsUserInRole(string role)
+	{
+		var authState = AuthenticationStateProvider.GetAuthenticationStateAsync().Result;
+		var user = authState.User;
+		return user.IsInRole(role);
+	}
+}
