--- a/Components/Pages/Users.razor
+++ b/Components/Pages/Users.razor
@@ -3,86 +3,87 @@
 
 <h2>Информация о пользователях</h2>
 <EditForm Model="Delete" OnValidSubmit="DeleteClicked">
-				<DataAnnotationsValidator />
-@if (users != null)
-{
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Email</th>
-                <th>Role</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var user in users)
-            {
-                <tr>
-                    <td>@user.Name</td>
-                    <td>@user.Email</td>
-                    
-                </tr>
-            }
-        </tbody>
-    </table>
-}
-else
-{
-    <p>No users found.</p>
-}
-    <div>
-       
-        <lable class="form-group">Введите Email пользователя для удаления</lable>
-        <InputText @bind-Value="Delete.Email" class="form-control"></InputText>
-        <br />
-        <button class="btn btn-primary delete-button">Delete</button>
-    </div>
-    <ValidationSummary />
+	<DataAnnotationsValidator />
+	@if (users != null)
+	{
+		<table class="table">
+			<thead>
+				<tr>
+					<th>Name</th>
+					<th>Email</th>
+					<th>Role</th>
+					<th></th>
+				</tr>
+			</thead>
+			<tbody>
+				@foreach (var user in users)
+				{
+					<tr>
+						<td>@user.Name</td>
+						<td>@user.Email</td>
+						<td>@user.Role</td>
+
+					</tr>
+				}
+			</tbody>
+		</table>
+	}
+	else
+	{
+		<p>No users found.</p>
+	}
+	<div>
+
+		<lable class="form-group">Введите Email пользователя для удаления</lable>
+		<InputText @bind-Value="Delete.Email" class="form-control"></InputText>
+		<br />
+		<button class="btn btn-primary delete-button">Delete</button>
+	</div>
+	<ValidationSummary />
 </EditForm>
 
 @code {
-    List<ApplicationUserDTO> users = new List<ApplicationUserDTO>();
-    public DeleteDTO Delete = new();
+	List<ApplicationUserDTO> users = new List<ApplicationUserDTO>();
+	public DeleteDTO Delete = new();
 
-    protected override async Task OnInitializedAsync()
-    {
-        await LoadUsers();
+	protected override async Task OnInitializedAsync()
+	{
+		await LoadUsers();
 
-    }
+	}
 
-    private async Task LoadUsers()
-    {
-        users = await accountService.GetUsersAsync();
-    }
+	private async Task LoadUsers()
+	{
+		users = await accountService.GetUsersAsync();
+	}
 
-    async Task DeleteClicked()
-    {
-        var userEmail = Delete.Email;
-        if (string.IsNullOrEmpty(userEmail))
-            return;
+	async Task DeleteClicked()
+	{
+		var userEmail = Delete.Email;
+		if (string.IsNullOrEmpty(userEmail))
+			return;
 
-        var confirmed = await ConfirmDelete();
-        if (confirmed)
-        {
-            var response = await accountService.DeleteUserAsync(Delete);
-            if (response.Flag)
-            {
-                await js.InvokeVoidAsync("alert", "User deleted successfully.");
-                await LoadUsers();
-            }
-            else
-            {
-                await js.InvokeVoidAsync("alert", response.Message);
-            }
-        }
-    }
+		var confirmed = await ConfirmDelete();
+		if (confirmed)
+		{
+			var response = await accountService.DeleteUserAsync(Delete);
+			if (response.Flag)
+			{
+				await js.InvokeVoidAsync("alert", "User deleted successfully.");
+				await LoadUsers();
+			}
+			else
+			{
+				await js.InvokeVoidAsync("alert", response.Message);
+			}
+		}
+	}
 
-    async Task<bool> ConfirmDelete()
-    {
-        return await js.InvokeAsync<bool>("confirm", "Are you sure you want to delete this user?");
-    }
-    
+	async Task<bool> ConfirmDelete()
+	{
+		return await js.InvokeAsync<bool>("confirm", "Are you sure you want to delete this user?");
+	}
+
 }
 
 
