--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -23,12 +23,17 @@
 					</div>
 					<div class="nav-item px-3">
 						<NavLink class="nav-link" href="register">
-							<span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Add User
+							<span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Add User
 						</NavLink>
 					</div>
 					<div class="nav-item px-3">
 						<NavLink class="nav-link" href="Users">
 							<span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Users
+						</NavLink>
+					</div>
+					<div class="nav-item px-3">
+						<NavLink class="nav-link" href="RequestTransport">
+							<span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Request transport
 						</NavLink>
 					</div>
 				</nav>
