--- a/Components/Pages/Users.razor
+++ b/Components/Pages/Users.razor
@@ -22,7 +22,6 @@
 						<td>@user.Name</td>
 						<td>@user.Email</td>
 						<td>@user.Role</td>
-
 					</tr>
 				}
 			</tbody>
@@ -44,7 +43,7 @@
 
 @code {
 	List<ApplicationUserDTO> users = new List<ApplicationUserDTO>();
-	public DeleteDTO Delete = new();
+	public DeleteUserDTO Delete = new();
 
 	protected override async Task OnInitializedAsync()
 	{
@@ -78,7 +77,6 @@
 			}
 		}
 	}
-
 	async Task<bool> ConfirmDelete()
 	{
 		return await js.InvokeAsync<bool>("confirm", "Are you sure you want to delete this user?");
